--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {
 }
 
 .dot {
-  stroke: #000;
+  /*stroke: #000;*/
 }
 
 .tooltip {
@@ -57,7 +57,7 @@ var yValue = function(d) { return d['timeElapsed'];}, // data -> value
     yAxis = d3.svg.axis().scale(yScale).orient("left");
 
 // setup fill color
-var cValue = function(d) { return d.Manufacturer;},
+var cValue = function(d) { return d['hasOffer'];},
     color = d3.scale.category10();
 
 // add the graph canvas to the body of the webpage
@@ -87,7 +87,7 @@ d3.json("results/results.json", function(error, data) {
   });
 
   data = data.filter(function(d){
-    return d['timeElapsed'] && d['receivedDate'] >= new Date("1/1/2014")
+    return d['timeElapsed'] && d['receivedDate'] >= new Date("1/1/2014") && d['hasOffer']
   })
 
   // don't want dots overlapping axis, so add in buffer to data domain
@@ -144,26 +144,27 @@ d3.json("results/results.json", function(error, data) {
       });
 
   // draw legend
-  // var legend = svg.selectAll(".legend")
-  //     .data(color.domain())
-  //   .enter().append("g")
-  //     .attr("class", "legend")
-  //     .attr("transform", function(d, i) { return "translate(0," + i * 20 + ")"; });
+  var legend = svg.selectAll(".legend")
+      .data(color.domain())
+    .enter().append("g")
+      .attr("class", "legend")
+      .attr("transform", function(d, i) { return "translate(0," + i * 20 + ")"; });
 
-  // // draw legend colored rectangles
-  // legend.append("rect")
-  //     .attr("x", width - 18)
-  //     .attr("width", 18)
-  //     .attr("height", 18)
-  //     .style("fill", color);
+  // draw legend colored rectangles
+  legend.append("rect")
+      .attr("x", width - 18)
+      .attr("width", 18)
+      .attr("height", 18)
+      .style("fill", color)
+      .style("opacity", 0.5)
 
-  // // draw legend text
-  // legend.append("text")
-  //     .attr("x", width - 24)
-  //     .attr("y", 9)
-  //     .attr("dy", ".35em")
-  //     .style("text-anchor", "end")
-  //     .text(function(d) { return d;})
+  // draw legend text
+  legend.append("text")
+      .attr("x", width -24)
+      .attr("y", 9)
+      .attr("dy", ".35em")
+      .style("text-anchor", "end")
+      .text(function(d) { return d;})
 });
 
 </script>
